2006-06-29  Raja R Harinath  <rharinath@novell.com>

	* MethodInfoTest.cs (GetBaseDefinition): New test for
	MethodInfo.GetBaseDefinition.

2006-06-07  Zoltan Varga  <vargaz@gmail.com>

	* BinderTests.cs: Add test for BindingFlags.ExactBinding.

2006-05-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* MethodInfoTest.cs: No longer derive from (deprecated) Assertion.
	Number individual asserts. Marked ByrefVtypeInvoke as NotDotNet for
	NET_1_1 profile, due to bug in MS.NET 1.1.

2006-05-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* MethodInfoTest.cs: GetMethodBody no longer throws ArgumentException
	for methods that have no IL body. Part of fix for bug #78522.

2006-05-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyTest.cs: Added tests for bug #78517.

2006-05-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyTest.cs: Added tests for bugs #78464, #78465 and #78468.
	Spaces to tabs.

2006-05-09  Atsushi Enomoto  <atsushi@ximian.com>

	* BinderTests.cs : (BindToMethodNamedArgs) hmm, why it didn't
	  show up during my last test run...

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* BinderTests.cs : added test for bug #77079.

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* BinderTests.cs : added test for bug #42547.

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* BinderTests.cs : added test for bug #41691.

2006-03-09  Zoltan Varga  <vargaz@gmail.com>

	* MethodInfoTest.cs: Add test for #77668.

2006-02-11  Zoltan Varga  <vargaz@gmail.com>

	* FieldInfoTest.cs: Revert nullable reftype tests.

2006-02-09  Zoltan Varga  <vargaz@gmail.com>

	* FieldInfoTest.cs: Add tests for nullable reference types.

2006-02-07  Martin Baulig  <martin@ximian.com>

	* MethodInfoTest.cs: Added test where IsGenericMethod must return false.

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* MethodInfoTest.cs: Add tests for IsGenericMethod.

2006-02-02  Zoltan Varga  <vargaz@gmail.com>
